--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-blinker==1.7.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.2
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-Werkzeug==3.0.1
-requests==2.31.0
+Bootstrap_Flask==2.2.0
+Flask_CKEditor==0.4.6
+Flask_Login==0.6.3
+Flask-Gravatar==0.5.0
+Flask_WTF==1.2.1
+WTForms==3.0.1
+Werkzeug==3.0.0
+Flask==2.3.2
+flask_sqlalchemy==3.1.1
+SQLAlchemy==2.0.25
