--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,25 @@
-Bootstrap_Flask==2.2.0
-Flask_CKEditor==0.4.6
-Flask_Login==0.6.3
-Flask-Gravatar==0.5.0
-Flask_WTF==1.2.1
-WTForms==3.0.1
-Werkzeug==3.0.0
+blinker==1.7.0
+Bootstrap-Flask==2.2.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+dnspython==2.6.1
+email_validator==2.1.1
 Flask==2.3.2
-flask_sqlalchemy==3.1.1
+Flask-CKEditor==0.4.6
+Flask-Gravatar==0.5.0
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+greenlet==3.0.3
+idna==3.6
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+requests==2.31.0
 SQLAlchemy==2.0.25
+typing_extensions==4.11.0
+urllib3==2.2.0
+Werkzeug==3.0.0
+WTForms==3.0.1
